[package]
name = "domain-hub"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"
authors = ["My Privacy DNS", "@spirillen"]
description = "Search tool for finding DNS blacklist records among verious sources"
categories = ["parsing", "command-line-utilities"]
keywords = ["search", "blacklist", "domain", "rpz", "firewall"]
documentation = "https://github.com/external-sources/yggdrasil/README.md"
readme = "README.md"
# license = "AGPL-3.0-or-later AND CC-BY-NC-SA-4.0"
homepage = "https://github.com/external-sources/yggdrasil"
repository = "https://github.com/external-sources/yggdrasil"
license-file = "LICENSE"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
regex = "1.10.5"
serde = "1.0.203"